@@ -320,7 +320,7 @@ enum EFCEUI
 	FCEUI_STOPMOVIE, FCEUI_RECORDMOVIE, FCEUI_PLAYMOVIE,
 	FCEUI_OPENGAME, FCEUI_CLOSEGAME,
 	FCEUI_TASEDIT,
-	FCEUI_RESET, FCEUI_POWER,
+	FCEUI_RESET, FCEUI_POWER,FCEUI_PLAYFROMBEGINNING
 };
 
 //checks whether an EFCEUI is valid right now
