@@ -937,6 +937,7 @@ bool FCEU_IsValidUI(EFCEUI ui)
 		break;
 
 	case FCEUI_STOPMOVIE:
+	case FCEUI_PLAYFROMBEGINNING:
 		return FCEUMOV_Mode(MOVIEMODE_PLAY|MOVIEMODE_RECORD);
 
 	case FCEUI_STOPAVI:
